# HuertIA

./: .gitignore  README.md  huertai-planning.md  huertai-roadmap.md
backend/: pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  security.py
backend/app/routes/: auth.py  chat.py  crops.py  events.py  expenses.py  gardens.py
backend/app/services/: ai_processor.py  notifications.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  tokenStore.ts
frontend/src/components/: CropModal.tsx  Dashboard.tsx  EventForm.tsx  EventTimeline.tsx  ExpenseForm.tsx  GardenGrid.tsx  RowEditor.tsx  SlotCell.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ChatPage.tsx  CropDetailPage.tsx  DashboardPage.tsx  GardenPage.tsx  LoginPage.tsx
frontend/src/types/: index.ts
